--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - testwebapp123hfh
+name: Build and deploy ASP.Net Core app to Azure Web App - webtest231
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - main
 
 env: 
-  AZURE_WEBAPP_NAME: testwebapp123hfh  # set this to your application's name
+  AZURE_WEBAPP_NAME: webtest231  # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '7.x'           # set this to the dot net version to use
 
@@ -36,3 +36,13 @@ jobs:
         with:
           name: .net-app
           path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deployment
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          package: "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
