Installing AZCli on runner

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,9 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: .net-app
+      - name: Install Azure CLI
+        run: |
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
       - name: Azure authentication
         uses: azure/login@v1
         with:
